{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 75,
  "lineage": "fb3c0e55-be48-5ac1-7b1e-4eedd3cfd229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd8d838a56933cfc",
            "domain": "vpc",
            "id": "eipalloc-0dd8d838a56933cfc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-70-61.compute-1.amazonaws.com",
            "public_ip": "3.218.70.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this_MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:internet-gateway/igw-03d3314fdafd2db2d",
            "id": "igw-03d3314fdafd2db2d",
            "owner_id": "862311624727",
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_MY_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd8d838a56933cfc",
            "association_id": "eipassoc-0a29ef2258841e85c",
            "connectivity_type": "public",
            "id": "nat-01ab996def42d4459",
            "network_interface_id": "eni-021142c1852dea27e",
            "private_ip": "10.0.2.39",
            "public_ip": "3.218.70.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0439f387618906065"
          },
          "dependencies": [
            "aws_eip.this_my_eip",
            "aws_subnet.this_public_subnets01",
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0111fd3f666fce7df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ab996def42d4459",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0111fd3f666fce7df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this_my_eip",
            "aws_nat_gateway.this_MY_NAT",
            "aws_route_table.this_PRIVATE_RT",
            "aws_subnet.this_public_subnets01",
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d3314fdafd2db2d",
            "id": "r-rtb-0d0e1195e70f55b0f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0e1195e70f55b0f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this_MY_IGW",
            "aws_route_table.this_PUBLIC_RT",
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_PRIVATE_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-0111fd3f666fce7df",
            "id": "rtb-0111fd3f666fce7df",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_PUBLIC_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-0d0e1195e70f55b0f",
            "id": "rtb-0d0e1195e70f55b0f",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_RTAS_PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069f97af2462ac362",
            "route_table_id": "rtb-0111fd3f666fce7df",
            "subnet_id": "subnet-03f51ebc716156ff7"
          },
          "dependencies": [
            "aws_route_table.this_PRIVATE_RT",
            "aws_subnet.this_private_subnets01",
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_RTAS_PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e8463ff4a25db4",
            "route_table_id": "rtb-0d0e1195e70f55b0f",
            "subnet_id": "subnet-0439f387618906065"
          },
          "dependencies": [
            "aws_route_table.this_PUBLIC_RT",
            "aws_subnet.this_public_subnets01",
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-03f51ebc716156ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f51ebc716156ff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_subnets02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-065a56f98e8823b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065a56f98e8823b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-0439f387618906065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439f387618906065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public_subnets02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-07b22a615c5287b3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b22a615c5287b3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c1e137080d1ce1d4"
          },
          "dependencies": [
            "aws_vpc.this_MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this_MY_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:vpc/vpc-0c1e137080d1ce1d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fbd9aae3afccbe07",
            "default_route_table_id": "rtb-07bcb6326e91ae227",
            "default_security_group_id": "sg-0d8e87966729dcc96",
            "dhcp_options_id": "dopt-073049f9f1a2d79f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1e137080d1ce1d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07bcb6326e91ae227",
            "owner_id": "862311624727",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}